# vision-ai-project

./: .gitignore  README.md  pyproject.toml
feature_extraction/: text_embedding_extraction.ipynb
models/scripts/: basic_cnn.py  image_data.py  train_model.py
notebooks/data-wrangling/: clean.ipynb  eda.ipynb
notebooks/models/: models.ipynb
scripts/: clean-data.py  compress-data.py  extract-files.py
